# newshive

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  example.sh  main.py  pyproject.toml  run.sh
agents/skills/gemini/: PROMPT.md  SKILL.md
src/ai_news_summarizer/: cli.py  crawler.py  database.py  log.py  pipeline.py  scraper.py  storage.py  summarizer.py
src/newshive/: article_discoverer.py  cli.py  config.py  content_processor.py  log.py  metadata_manager.py  storage.py  task_orchestrator.py  text_cleaner.py
tests/: conftest.py  test_article_discoverer.py  test_cli.py  test_content_processor.py  test_crawler.py  test_database.py  test_metadata_manager.py  test_scraper.py  test_storage.py  test_summarizer.py
