[project]
name = "newshive"
version = "0.1.0"
description = "Summarize AI news articles from various sources"
authors = [{ name = "Sampath Maddula", email = "sampath.maddula@google.com" }]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "requests",
    "feedparser",
    "python-dateutil",
    "google-generativeai",
    "rich",
    "fastapi",
    "uvicorn",
    "ruff",
    "pytest",
    "sqlite_utils",
    "httpx",
    "ollama"
]

[project.scripts]
newshive = "newshive.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newshive"]
